[gd_scene load_steps=19 format=3 uid="uid://dv270qxtghgae"]

[ext_resource type="Script" path="res://Scenes/UIScenes/ui.gd" id="1_eoqdi"]
[ext_resource type="Texture2D" uid="uid://cqpebqyor663b" path="res://Assets/Tilesheets/Characters/Player.png" id="1_nvr4f"]
[ext_resource type="FontFile" uid="uid://canpo2eqq0nj7" path="res://Assets/Fonts/Kenney Pixel.ttf" id="3_iajk8"]
[ext_resource type="Texture2D" uid="uid://dux73gk24u61g" path="res://Assets/Tilesheets/Interface/Modern_UI_Style_2_32x32.png" id="4_xlco1"]
[ext_resource type="StyleBox" uid="uid://dfl70f43r5r3k" path="res://Resources/Buttons/help_btn_normal.tres" id="5_y8dky"]
[ext_resource type="Texture2D" uid="uid://cbgh7xgs4mak" path="res://Resources/Buttons/hud_settings_button.tres" id="5_yewbq"]
[ext_resource type="StyleBox" uid="uid://dfqoaiavr20kg" path="res://Resources/50_opacity_texture.tres" id="6_0jupt"]
[ext_resource type="StyleBox" uid="uid://beoehoj5w4jgr" path="res://Resources/Buttons/help_btn_hover.tres" id="6_buy8n"]
[ext_resource type="PackedScene" uid="uid://cpm4lscgv76w1" path="res://Scenes/UIScenes/settings.tscn" id="6_k7sni"]
[ext_resource type="PackedScene" uid="uid://baanbsd4d3prj" path="res://Scenes/UIScenes/help_panel.tscn" id="9_d4cv1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m8fhh"]
atlas = ExtResource("1_nvr4f")
region = Rect2(96, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a53l0"]
atlas = ExtResource("4_xlco1")
region = Rect2(416, 800, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6v52h"]
texture = ExtResource("5_yewbq")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wvjov"]
texture = ExtResource("5_yewbq")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ctmic"]
texture = ExtResource("5_yewbq")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb16d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_cihe0"]
atlas = ExtResource("4_xlco1")
region = Rect2(24, 472, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ikly"]
texture = SubResource("AtlasTexture_cihe0")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_eoqdi")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hint" type="Label" parent="HUD"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 32)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -91.0
offset_right = 96.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("6_0jupt")
text = "Press 'E' to interact"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MG" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Side" type="MarginContainer" parent="HUD/MG"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VB" type="VBoxContainer" parent="HUD/MG/Side"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="PlayerInfo" type="HBoxContainer" parent="HUD/MG/Side/VB"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Image" type="NinePatchRect" parent="HUD/MG/Side/VB/PlayerInfo"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_m8fhh")

[node name="VB" type="VBoxContainer" parent="HUD/MG/Side/VB/PlayerInfo"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="HUD/MG/Side/VB/PlayerInfo/VB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.239216, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
text = "<player_name>"

[node name="Level" type="Label" parent="HUD/MG/Side/VB/PlayerInfo/VB"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.239216, 1)
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
text = "<level0>"

[node name="Packets" type="HBoxContainer" parent="HUD/MG/Side/VB"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0
alignment = 2

[node name="Icon" type="TextureRect" parent="HUD/MG/Side/VB/Packets"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AtlasTexture_a53l0")
expand_mode = 5

[node name="Packet" type="Label" parent="HUD/MG/Side/VB/Packets"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.239216, 1)
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
text = "<packets>"
vertical_alignment = 1

[node name="Control" type="Control" parent="HUD/MG/Side/VB"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="HUD/MG/Side"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="HelpBtn" type="Button" parent="HUD/MG/Side/HB"]
clip_contents = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("5_y8dky")
theme_override_styles/hover = ExtResource("6_buy8n")
theme_override_styles/pressed = ExtResource("5_y8dky")
theme_override_styles/focus = ExtResource("5_y8dky")

[node name="SettingsBtn" type="Button" parent="HUD/MG/Side/HB"]
clip_contents = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_6v52h")
theme_override_styles/hover = SubResource("StyleBoxTexture_wvjov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ctmic")
theme_override_styles/focus = SubResource("StyleBoxFlat_eb16d")

[node name="Settings" parent="HUD/MG" instance=ExtResource("6_k7sni")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HelpPanel" parent="HUD/MG" instance=ExtResource("9_d4cv1")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2

[node name="TaskNotif" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.0888889
anchor_right = 0.7
anchor_bottom = 0.255556
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4ikly")
metadata/_edit_use_anchors_ = true

[node name="VB" type="VBoxContainer" parent="TaskNotif"]
layout_mode = 2

[node name="Label" type="Label" parent="TaskNotif/VB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7605, 0.741, 0.78, 1)
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.239216, 1)
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
text = "\"New Objective\""
horizontal_alignment = 1
uppercase = true

[node name="Objective" type="Label" parent="TaskNotif/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(224, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.239216, 1)
theme_override_fonts/font = ExtResource("3_iajk8")
theme_override_font_sizes/font_size = 16
text = "<Current objective>"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ObjectiveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CertTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="pressed" from="HUD/MG/Side/HB/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="HUD/MG/Side/HB/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="HUD/MG/Settings/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/Control/ExitSettings" to="." method="_on_exit_settings_pressed"]
[connection signal="pressed" from="HUD/MG/Settings/ColorRect/NinePatchRect/MarginContainer/HB/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HUD/MG/HelpPanel/ColorRect/NinePatchRect/MarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="ObjectiveTimer" to="." method="_on_objective_timer_timeout"]

[editable path="HUD/MG/Settings"]
[editable path="HUD/MG/HelpPanel"]
